# avr-utils

./: .gitignore  CMakeLists.txt  README.md  create_new_module.sh
lib/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/avr-utils/common/: bit.h  button.h  leg.h  matrix.h  mem.h  point.h  real_inline.h
src/common/src/: button.c  leg.c
