include(FetchContent)

# Adding libraries example

# # Adding MinimalSocket library
# set(BUILD_MinimalCppSocket_SAMPLES
#     OFF
#     CACHE BOOL "" FORCE)
# FetchContent_Declare(
#   min_sock
#   GIT_REPOSITORY https://github.com/andreacasalino/Minimal-Socket
#   GIT_TAG v.3.1
#   GIT_SHALLOW TRUE
#   SYSTEM)
# FetchContent_MakeAvailable(min_sock)
